--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
             "always"
         ],
 
-        "no-unused-vars" : "off"
+        "no-unused-vars" : "off",
+        "no-inner-declarations" : "off"
     }
 }
